--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>RTZ SAC</title>
     <base href="/">
 
-    <link rel="icon" type="image/png" href="assets/img/logo.jpeg">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/logo.jpeg">
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
